<resources>
    <string name="app_name">Finance Tracker</string>
</resources>

